# 3divi

./: .env  .gitignore  DockerfileClient  DockerfileHandler  DockerfileReceiver  DockerfileWriter  README.md  docker-compose.yaml  pyproject.toml  test_reciever.py
client/: config.py  logger.py  main.py
client/tasks/: routes.py
server/handler/: config.py  main.py
server/receiver/: config.py  main.py
server/receiver/tasks/: routes.py
server/writer/: config.py  main.py
server/writer/tasks/: routes.py
