[tool.poetry]
name = "3divi"
version = "0.1.0"
description = ""
authors = ["Dmitrii <stakheev12@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
aiohttp = "^3.9.3"
pytest = "^8.1.1"
httpx = "^0.27.0"
asyncio = "^3.4.3"
path = "^16.13.0"
pika = "^1.3.2"
requests = "^2.31.0"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
